--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.X]
+        node-version: [10.21.0]
 
     steps:
       - uses: actions/checkout@v2
