--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "blog_plantes",
   "version": "1.0.0",
-  "description": "",
+  "description": "traite des plantes sauvages commestibles de l'Aude",
   "main": "index.js",
   "scripts": {
     "build": "env NODE_ENV=production npx eleventy --pathprefix 'blog_plantes'",
     "deploy": "gh-pages -d _site"
   },
   "homepage": "/blog_plantes",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [plantes, sauvages, commestibles, Aude, Occitanie, médicinales, adventices],
+  "author": "jessolivette",
+  "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
     "gh-pages": "^3.1.0"
